# tools4zettelkasten

./: .env.example  .gitignore  .readthedocs.yaml  ArbeitMitDemZettelkasten.code-workspace  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  dev_requirements.txt  requirements.txt  setup.cfg  setup.py  zettelkasten.py  zettelkasten_tools.py
docs/: bugs.html  conf.py  first_steps.html  generate_docs.html  genindex.html  index.html  index.rst  license.html  modules.html  objects.inv  projectsetup.html  py-modindex.html  search.html  searchindex.js  setup_dev_environment.html  todo.html  tools4zettelkasten.html  why_tools4zettelkasten.html  why_zettelkasten_tools.html
docs_source/: Makefile
experiments/: KWDate.py  experiment.py  graphviz_tryout.py  plugin_wiki.py  tryout_commonmark.py  tryout_mistune.py
requirements/: requirements_batch_rename_refactoring.md  requirements_edit_view_buttons.md  requirements_hierarchical_list_sorting.md  requirements_interactive_svggraph.md  requirements_mcp_server_integration.md  requirements_note_navigation.md  requirements_rag_chat.md  requirements_settings_command.md
templates/: edit.html  mainpage.html  startpage.html
test/: test_zettelkasten.py
tests/: conftest.py  context.py  old_test_zettelkasten_tools.py  test_app.py  test_cli.py  test_flask_views.py  test_goaltree.py  test_handle_filenames.py  test_mcp_server.py  test_persistency.py  test_rag.py  test_reorganize.py  test_stage.py  test_zettelkasten.py  zettelkasten.py
tools4zettelkasten/: VERSION  __init__.py  _version.py  analyse.py  app.py  (+11 more)
(+40 files in other folders)
