[metadata]
version = file: tools4zettelkasten/VERSION
license = MIT License
license_files = LICENSE.txt
url = https://github.com/rreben/tools4zettelkasten
project_urls =
    Issue Tracker = https://github.com/rreben/tools4zettelkasten/issues
    Source Code = https://github.com/rreben/tools4zettelkasten
    Method = https://www.mycelium-of-knowledge.org/
    Docs = https://rreben.github.io/tools4zettelkasten/
    Read the Docs = https://tools4zettelkasten.readthedocs.io/en/latest/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.9